[tool.poetry]
name = "pickpocker"
version = "0.1.0"
description = ""
authors = ["Vinicius Heleno <vinihss@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
datetime = "^5.5"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
requests = "^2.32.3"
pyshorteners = "^1.0.1"
pydantic = "^2.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
